Update MergeIntervals.java