@@ -5,6 +5,11 @@ import java.util.*;
 public class MergeIntervals {
 
     //https://leetcode.com/problems/merge-intervals/
+    
+    /*
+    Given an array of intervals where intervals[i] = [starti, endi], merge all overlapping intervals, 
+    and return an array of the non-overlapping intervals that cover all the intervals in the input.
+     */
 
     public int[][] merge(int[][] intervals)
     {
@@ -21,7 +26,7 @@ public class MergeIntervals {
 
         for(int i=1; i<intervals.length; i++){
             int[] curr = intervals[i];
-            int[] last = result.get(result.size() - 1); // 🔥 important
+            int[] last = result.getLast(); // 🔥 important
 
             if(curr[0] <= last[1]){ //if current starts before previous ends, then merge
                 // merge → update last interval
